<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayBg"
    android:orientation="vertical"
    tools:context=".ui.InfoActivity">
    <com.xiamo.xiaoquesang.common.widget.TitleBar
        android:layout_width="match_parent"
        app:backImg="@mipmap/back"
        app:title="@string/mine_info"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:id="@+id/headLl"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:background="@drawable/ripple_gray"
            android:layout_height="80dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_weight="1"
                android:textColor="@color/textColor3"
                android:text="@string/info_head"/>
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/headImg"
                tools:src="@mipmap/unlogin"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/more"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>
        <View
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            style="@style/hLine" />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:gravity="center_vertical"
            android:layout_height="55dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/textColor3"
                android:text="@string/info_nickname"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:id="@+id/nameTv"
                tools:text="lalalla"
                android:textColor="@color/textColor9"
                android:textSize="15sp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/more"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
        <View
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            style="@style/hLine" />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:gravity="center_vertical"
            android:layout_height="55dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/textColor3"
                android:text="@string/info_phone"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:id="@+id/phoneTv"
                tools:text="lalalla"
                android:textColor="@color/textColor9"
                android:textSize="15sp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>