<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/grayBg"
    android:layout_height="match_parent"
    tools:context=".ui.MineActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/mine_bg"
                android:adjustViewBounds="true"/>
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="40dp"
                android:src="@mipmap/back"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:paddingTop="24dp"
                android:layout_height="wrap_content">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/unlogin"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    tools:text="唐墨夏"
                    android:layout_marginTop="8dp"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/white"
                            tools:text="11"
                            android:textSize="16sp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:textColor="@android:color/white"
                            android:text="@string/mine_submit"
                            android:textSize="16sp"/>

                    </LinearLayout>
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/white"/>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/white"
                            tools:text="11"
                            android:textSize="16sp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:textColor="@android:color/white"
                            android:text="@string/mine_fav"
                            android:textSize="16sp"/>

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:background="@android:color/white"
            android:layout_height="wrap_content">
           <LinearLayout
               android:layout_width="match_parent"
               android:orientation="horizontal"
               android:gravity="center_vertical"
               android:paddingLeft="16dp"
               android:background="@drawable/ripple_gray"
               android:paddingRight="16dp"
               android:layout_height="50dp">
               <TextView
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:textSize="16sp"
                   android:text="@string/mine_info"/>
               <ImageView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@mipmap/more"/>

           </LinearLayout>
            <View
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                style="@style/hLine" />
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:background="@drawable/ripple_gray"
                android:paddingRight="16dp"
                android:layout_height="50dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:text="@string/mine_about"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/more"/>

            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:paddingLeft="16dp"
            android:background="@drawable/ripple_gray"
            android:text="@string/btn_logout"
            android:textSize="18sp"
            android:textColor="@color/colorAccent"
            android:paddingRight="16dp"
            android:layout_height="50dp">



        </TextView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>